--- a/rondo/Podfile
+++ b/rondo/Podfile
@@ -8,4 +8,5 @@ target ‘rondo’ do
   pod 'FBSDKCoreKit'
   pod 'FBSDKShareKit'
   pod 'FBSDKLoginKit'
+  pod 'SwiftyJSON', :git => 'https://github.com/SwiftyJSON/SwiftyJSON.git'
 end
